Fix list item extra space

--- a/src/components/app-nav/app-nav.css
+++ b/src/components/app-nav/app-nav.css
@@ -33,7 +33,6 @@ ul > li {
 
 ul > li > span {
   display: block;
-  width: 100%;
   height: 100%;
   padding: 1rem;
   transition: all 200ms;
